# team-poll-backend

./: Cargo.toml
src/: main.rs
src/db/: mod.rs
src/handlers/: auth.rs  create_poll.rs  edit_poll.rs  get_poll.rs  health.rs  list_polls.rs  mod.rs  stream_results.rs  teams.rs  vote.rs
src/middleware/: auth.rs
src/routes/: mod.rs  polls.rs
