[package]
name = "pollServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"


sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "tls-rustls", "macros", "chrono"] }

uuid = { version = "1", features = ["v4"] }

tower-http = { version = "0.5", features = ["cors"] }  

tokio-stream = "0.1"
futures = "0.3"

dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
